--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,10 @@
 body {
-  background-color: cornsilk;
-  color: black;
+  background-color: #F1EFE7;
+  color: #414140;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   margin: 0;
-  padding: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
