--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   background-color: #9ac6b2;
-  color: #5a4032;
+  color: #411D0A;
   font-family: Quicksand;
   margin: 0;
   -webkit-font-smoothing: antialiased;
